frontend/web/css/site.css
/* ... */
.under-menu{
	background: -o-linear-gradient(#ffffff, #f3f3f3); /* For Opera 11.1 to 12.0 */
	background: -webkit-linear-gradient(#ffffff, #f3f3f3); /* For Safari 5.1 to 6.0 */
	background: -moz-linear-gradient(#ffffff, #f3f3f3); /* For Firefox 3.6 to 15 */
	background: linear-gradient(#ffffff, #f3f3f3); /* Standard syntax */
	border-top: 1px solid #e5e5e5;
	border-bottom: 1px solid #fefefe;
}

.under-menu-content{
	display: block;
	width: 1172px;
	margin: auto;
	padding-top: 10px;
	height: 90px;
}

.under-menu-sticky{
}

.sticky  .under-menu-content{
	padding-top: 8px;
	height: 50px;
	display: block;
	width: 1172px;
	margin: auto;
}

.sticky-on-scroll{
	z-index: 3;
	position: relative;
}

.header .input-style-main{
	float: left;
	padding-left: 50px;
}

.under-menu .logo{
	float: left;
	width: 250px;
	height: 80px;
	background: url("/img/site/logo.png") no-repeat;
}

.sticky .logo{
	background: url("/img/site/short-logo.png") no-repeat;
	float: left;
	width: 160px;
	height: 23px;
	margin-top: 6px;
}

.tt-scrollable-menu{
	float: left;
}

.input-style-main input[type='text'] {
	background: url("/img/site/search.png") no-repeat 10px 7px;
	width: 305px;
	height: 35px;
	-moz-box-shadow: inset 0 0 3px #e4e4e4;
	-webkit-box-shadow: inset 0 0 3px #e4e4e4;
	box-shadow: inset 0 0 3px #e4e4e4;
	border: 1px solid #e4e4e4;
	border-radius: 3px;
	padding-left: 40px;
	margin-top: 18px;
	color: #8b8b8b;
	margin-right: 5px;
}

.sticky .input-style-main input[type='text'] {
	width: 575px;
	margin-top: 0px;
}

.input-style-main .small-button {
	width:90px;
	height: 35px;
}

.input-style-main .blue-button {
	background: #29a1e0;
	position: relative;
	border:none;
	border-bottom: 3px solid #098fd5;
	border-radius: 5px;
	font-size: 14px;
	font-family: OpenSans-Semibold;
	color: white;
	vertical-align: bottom;
	/*background: #ffd600; /* Old browsers */
	/*background: -moz-linear-gradient(top,  #ffd600 0%, #f9b519 80%); /* FF3.6+ */
	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffd600), color-stop(80%,#f9b519)); /* Chrome,Safari4+ */
	/*background: -webkit-linear-gradient(top,  #ffd600 0%,#f9b519 80%); /* Chrome10+,Safari5.1+ */
	/*background: -o-linear-gradient(top,  #ffd600 0%,#f9b519 80%); /* Opera 11.10+ */
/*	background: -ms-linear-gradient(top,  #ffd600 0%,#f9b519 80%); /* IE10+ */
/*	background: linear-gradient(to bottom,  #ffd600 0%,#f9b519 80%); /* W3C */
/*	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd600', endColorstr='#f9b519',GradientType=0 ); /* IE6-9 */
	-webkit-box-shadow: inset 0px 0px 5px 0px white;
	box-shadow: inset 0px 1px 5px 0px white;
	background: #29a1e0;
	margin-top: 18px;
}

.sticky .blue-button{
	display: none;
}

.header .phone-number{
	float: left;
	padding-left: 40px;
	padding-top: 20px;
}

.header .phone-number .popover.bottom{
	margin-left: 55px;
}

.header .phone-number .popover.bottom > .arrow{
	margin-left: 20px;
}

.header .phone-number .popover.bottom > .arrow::after{
	margin-left: -11px;
	border-bottom-color: #fff;
	border-top-width: 0;
}

.header .phone-number .popover > .arrow::after{
	border-width: 11px;
}

.sticky .phone-number{
	padding-top: 3px;
}

.header .phone-number .number{
	padding-left: 5px;
	vertical-align: middle;
	font-size: 18px;
	font-family: OpenSans-Semibold;
	color: #3b3b39;
	border: none;
	background: none;
	box-shadow: none;
	text-shadow: none;
}

.header .phone-number .call-back{
	/*height: 330px;*/
	/*width: 285px;
	position: absolute;
	background: #ffffff;
	border-radius: 3px;
	box-shadow: 0px 1px 3px -1px rgba(0, 0, 0, 0.5);
	margin-top: 14px;
	margin-left: 10px;
	display: ;
	z-index: 115;
	padding: 25px;*/
}

.header .phone-number .yellow-button{
	margin: auto;
	display: block;
	box-shadow: 0px 2px 2px -1px rgb(233, 202, 111);
}

.header .phone-number .popover-title{
	background: no-repeat;
	border: none;
}

.header .phone-number .popover-footer{
	background: no-repeat;
	border: none;
	margin-bottom: 10px;
}


.call-back .yellow-button{
	border-bottom: 3px solid rgb(233, 202, 111);
	margin: auto;
	display: block;
}

.call-back .blue-white-phone{
	width: 40px;
	height: 40px;
	float: left;
	border-radius: 50%;
	margin-right: 13px;
	text-align: initial;
	background: #1b99db url("/img/site/white-phone.png") no-repeat center;
	cursor: pointer;
}

.call-back .semibold{
	font-size: 24px;
	font-family: OpenSans-Semibold;
	color: #4f4f4f;
	margin-top: -5px;
	height: 26px;
	display: inline-block;
	vertical-align: bottom;
}

.call-back .free-call{
	font-size: 12px;
}

.call-back .city-number{
	overflow: auto;
	margin-top: 15px;
	margin-left: 5px;
}

.call-back .city{
	float: left;
	width: 130px;
	font-family: OpenSans !important;
}

.call-back .city-number span{
	font-family: OpenSans-Semibold;
	color: #4f4f4f;
	/*font-size: 14px;
	height: 15px;
	line-height: 15px;
	display: inline-block;
	overflow: auto;*/
}

.call-back .work-time span{
	display: block;
	text-align: center;
}

.call-back .work-time{
	margin-top: 10px;
}

/*.call-back .city-number li{
	display: block;
	float: left;
	width: 45%;
	font-size: 14px;
	color: #4f4f4f;
}

.call-back .city-number{
	overflow: auto;
	margin-top: 25px;
	margin-left: 5px;
}*/

/*.header .phone-number .call-back:before, .header .phone-number .call-back:after{
	content: '';
	position: absolute;
	display: inline-block;
	height: 1px;
	width: 12px;
	top: ;
	margin-top: -1px;
	left: 55%;
	margin-left: -6px;
	background: #a2e0b0;
}

.header .phone-number .call-back:before{
	-webkit-transform: rotate(135deg);
	-moz-transform: rotate(135deg);
	-ms-transform: rotate(135deg);
	-o-transform: rotate(135deg);
	transform: rotate(135deg);
}

.header .phone-number .call-back:after{
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	transform: rotate(45deg);
	margin-left: 2px;
}*/
/* ... */

